--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <title>ONE OK ROCK</title>
 </head>
+
 <body>
     <header></header>
 
@@ -19,15 +22,55 @@
 
         <div class="info-container">
             <h2>Historia:</h2>
-            <h3>2005-2006: Formación y primeros días</h3>
+            <h3>2005-2006: Historia y formación</h3>
             <p>
-                ONE OK ROCK es una banda de rock japonesa formada en 2005 y debutó en 2007.
-                Comenzaron con shows en pequeñas salas de conciertos y festivales de verano, y rápidamente crecieron en popularidad, actuando en el icónico Nippon Budokan 
-                y eventualmente encabezando grandes estadios al aire libre, arenas y lugares abovedados en todo Japón.
+                La historia de ONE OK ROCK comienza en el 2005 en Tokio, Japón, cuando un joven guitarrista llamado
+                Toru Yamashita decidió formar su propia banda. Toru ya había formado parte de un grupo llamado HEADS
+                (junto con Ryota, que tocaba el bajo). Queriendo dar un salto más serio, invitó a Ryota a unirse a su
+                nueva banda; poco después, ambos sumaron a Alexander “Alex” Onizawa en la guitarra. En paralelo, Toru
+                vio a Takahiro “Taka” Moriuchi (quien en ese momento estaba en otro grupo) cantar, y lo convenció para
+                que se uniera al proyecto. El nombre “ONE OK ROCK” surgió de algo muy simple: los miembros solían
+                ensayar a la 1 a.m. (“one o'clock” en inglés), pero al pronunciar “o’clock” en japonés, la “L” y la “R”
+                suenan similares, por lo que quedó “One OK Rock”.
+            </p>
+
+            <p>
+                Inicialmente, el baterista era Yu Koyanagi, pero él dejó la banda en 2006 para dedicarse a actuar. En
+                2007, ingresó Tomoya Kanki como nuevo baterista, completando la alineación que más tarde sería icónica.
+            </p>
+
+            <p>
+                Durante esos años de formación, la banda comenzó tocando en pequeños locales (“live houses”),
+                con una energía cruda y muchas ganas de hacerse notar. En 2007 lanzan oficialmente su primer álbum de
+                estudio, Zeitakubyou, bajo sello indie; poco después, firman con la disquera A-Sketch.
+            </p>
+
+            <h3>Transición, cambio de alineación y evolución musical</h3>
+
+            <p>
+                En 2009 ocurre un punto de inflexión: Alex Onizawa abandona la banda tras un incidente, dejando a ONE OK
+                ROCK como un cuarteto formado por Taka, Toru, Ryota y Tomoya.
+            </p>
+
+            <p>
+                Esta nueva alineación marca el inicio de una transformación musical. Sus primeros discos mostraban
+                influencias pop-punk y emo —inspirados, por ejemplo, en bandas como Good Charlotte.
+                A medida que avanzan, integran elementos más pesados: grunge, post-hardcore, rock alternativo. Por
+                ejemplo, para el álbum Jinsei × Boku = (2013), se puede notar una influencia de Linkin Park por la
+                fusión de partes con gritos, melodías y rap-rock.
+            </p>
+
+            <h3>Ascenso en Japón y primeras certificaciones</h3>
+
+            <p>
+                Con su segundo y tercer álbum, Beam of Light y Kanjō Effect (ambos de 2008), la banda consolida su
+                presencia en la escena rock japonesa. Su cuarto álbum, Niche Syndrome (2010), logra posicionarse en el
+                top 5 de la tabla Oricon y recibe certificación platino.
             </p>
         </div>
     </main>
 
     <footer></footer>
 </body>
+
 </html>
