--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Durante esos años de formación, la banda comenzó tocando en pequeños locales (“live houses”),
                 con una energía cruda y muchas ganas de hacerse notar. En 2007 lanzan oficialmente su primer álbum de
                 estudio, Zeitakubyou, bajo sello indie; poco después, firman con la disquera A-Sketch.
-            </p>
+            </p><br>
 
             <h3>Transición, cambio de alineación y evolución musical</h3>
 
@@ -54,11 +54,11 @@
 
             <p>
                 Esta nueva alineación marca el inicio de una transformación musical. Sus primeros discos mostraban
-                influencias pop-punk y emo —inspirados, por ejemplo, en bandas como Good Charlotte.
+                influencias pop-punk y emo inspirados, por ejemplo, en bandas como Good Charlotte.
                 A medida que avanzan, integran elementos más pesados: grunge, post-hardcore, rock alternativo. Por
-                ejemplo, para el álbum Jinsei × Boku = (2013), se puede notar una influencia de Linkin Park por la
+                ejemplo, para el álbum JinseixBoku= (2013), se puede notar una influencia de Linkin Park por la
                 fusión de partes con gritos, melodías y rap-rock.
-            </p>
+            </p><br>
 
             <h3>Ascenso en Japón y primeras certificaciones</h3>
 
@@ -66,6 +66,108 @@
                 Con su segundo y tercer álbum, Beam of Light y Kanjō Effect (ambos de 2008), la banda consolida su
                 presencia en la escena rock japonesa. Su cuarto álbum, Niche Syndrome (2010), logra posicionarse en el
                 top 5 de la tabla Oricon y recibe certificación platino.
+            </p>
+
+            <p>
+                El éxito continúa con Zankyo Reference (2011), que llega al número 2 en Japón. Con su sencillo doble
+                “Re:make / No Scared”, demuestran que pueden compilar canciones tanto intensas como melódicas.
+            </p><br>
+
+            <h3>El salto internacional</h3>
+
+            <p>
+                El punto de inflexión real para su proyección global llega con “The Beginning” (2012), tema que fue
+                usado como canción principal en la película live-action de Rurouni Kenshin. Esa canción les abrió muchas
+                puertas más allá de Japón.
+            </p>
+
+            <p>
+                Al lanzar el álbum JinseixBoku= en 2013, ya estaban más maduros en sonido y composición. Luego, con
+                35xxxv (2015), dan un salto internacional muy grande: es su primer álbum lanzado con Warner Records
+                (EE.UU.) y contiene una versión “deluxe” con todas las canciones en inglés. Este álbum no sólo entra en
+                las listas de Billboard (incluida la Billboard World Albums), sino que
+                también reafirma su popularidad en Japón (llega al número 1 en Oricon).
+            </p>
+
+            <p>
+                Con la consolidación internacional, sus siguientes discos Ambitions (2017) y Eye of the Storm (2019)
+                presentan un sonido más pulido, accesible y bastante “arena rock” / pop-rock. En este período ya no solo
+                están dirigidos a su público japonés, sino a una audiencia global.
+            </p><br>
+
+            <h3>Sueños, raíces y retorno al rock</h3>
+
+            <p>
+                En 2022 lanzan Luxury Disease, un álbum que muchos consideran un regreso emocional y potente a sus
+                raíces rock, pero con una producción de nivel mundial.
+            </p>
+
+            <p>
+                Y en 2025, celebrando 20 años desde su formación, publican su undécimo álbum: DETOX. Este disco mezcla
+                sus comienzos más intensos (rock alternativo, hard rock) con la madurez de una banda
+                que ya domina tanto lo anglosajón como lo japonés. Tiene colaboraciones con productores reconocidos como
+                Rob Cavallo, Dan Lancaster, entre otros.
+            </p>
+
+            <p>
+                Uno de los singles destacados es “Delusion:All”, lanzado en julio de 2024, que sirve como tema para una
+                película histórica japonesa (Kingdom 4: Return of the Great General) y fue producido por Lancaster y
+                Cavallo.
+            </p><br>
+
+            <h3>Miembros: quién es quién</h3>
+
+            <p>
+            <ul>
+                <li>Takahiro “Taka” Moriuchi - Vocalista principal. Con su voz poderosa y su capacidad para escribir
+                    letras
+                    emocionales, es el corazón lírico de la banda.</li>
+                <li>Toru Yamashita - Guitarra. Es uno de los fundadores y el líder en muchos sentidos del proyecto.</li>
+                <li>Ryota Kohama - Bajo. Ha estado desde los inicios y aporta esa base rítmica rockera muy sólida.</li>
+                <li>Tomoya Kanki - Batería. Se unió en 2007 y ha aportado tanto energía en vivo como composición.</li>
+                <br>
+                Antiguos miembros: Alexander Onizawa (guitarra) y Yu Koyanagi (batería) también dejaron una huella en
+                sus primeros años.
+            </ul>
+            <img src="img/Imagen 3.webp" alt="">
+            </p>
+
+            <h3>Legado y repercusión</h3>
+
+            <p>
+                ONE OK ROCK ha logrado algo poco común entre las bandas japonesas rock: han cruzado exitosamente al
+                mercado global. No solo por su estilo musical (fusión de rock alternativo, emo, post-hardcore,
+                pop-punk), sino también por su estrategia bilingüe.
+            </p>
+
+            <p>
+                Han llenado arenas y estadios en Japón, como el Nippon Budokan, y han realizado giras por Norteamérica,
+                Europa y Latinoamérica. Además, su música ha sido usada en producciones cinematográficas importantes, lo
+                que refuerza su popularidad internacional.
+            </p>
+
+            <p>
+                Su propia agencia, 10969 Inc., les da una independencia creativa muy valiosa, permitiéndoles controlar
+                su dirección artística.
+            </p>
+
+            <p>
+                En términos de estilo, la banda se caracteriza por su versatilidad: pueden ofrecer canciones explosivas
+                y agresivas, pero también baladas introspectivas y emocionales. Esa dualidad ha hecho que su base de
+                fans sea muy variada: desde jóvenes atraídos por el punk o el emo hasta audiencias que buscan letras
+                profundas en inglés.
+            </p>
+
+            <h3>Impacto comunitario</h3>
+
+            <p>
+                Para muchos fans, ONE OK ROCK no es solo música; es parte de su identidad. Hay comunidades de
+                admiradores que dicen que descubrieron a la banda tras ver Rurouni Kenshin, escuchar “The Beginning” y
+                sentirse inmediatamente conectados.
+            </p>
+            <p>
+                Muchos fanáticos también mencionan que la música de OOR ha sido un punto de unión: les ha ayudado a
+                crear amistades, compartir emociones y formar comunidades internacionales. 
             </p>
         </div>
     </main>
