Arreglos de diseño

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <header></header>
-
     <main>
-        <h1 class="titulo">ONE OK ROCK</h1>
-        <img src="img/Imagen 1.webp" alt="">
+        <section class="hero-section">
+            <h1 class="titulo">ONE OK ROCK</h1>
+            <img class="hero-image" src="img/Imagen 1.webp" alt="">
+        </section>
 
         <div class="info-container">
             <h2>Historia:</h2>
@@ -117,7 +117,6 @@
 
             <h3>Miembros: quién es quién</h3>
 
-            <p>
             <ul>
                 <li>Takahiro “Taka” Moriuchi - Vocalista principal. Con su voz poderosa y su capacidad para escribir
                     letras
@@ -129,8 +128,7 @@
                 Antiguos miembros: Alexander Onizawa (guitarra) y Yu Koyanagi (batería) también dejaron una huella en
                 sus primeros años.
             </ul>
-            <img src="img/Imagen 3.webp" alt="">
-            </p>
+            <img src="img/Imagen 3.webp" alt=""><br>
 
             <h3>Legado y repercusión</h3>
 
@@ -171,8 +169,8 @@
             </p>
         </div>
     </main>
-
-    <footer></footer>
+    
+    <footer>&copy; Copyright © 2025 &copy; Página tributo a ONE OK ROCK</footer>
 </body>
 
 </html>
